--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "@ionic-native/camera": "^5.36.0",
     "@ionic-native/contacts": "^5.36.0",
     "@ionic-native/core": "^5.36.0",
+    "@ionic-native/native-page-transitions": "^5.36.0",
+    "@ionic-native/native-storage": "^5.36.0",
     "@ionic/angular": "^5.5.2",
     "cordova-android": "9.1.0",
+    "cordova-plugin-nativestorage": "^2.3.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -50,6 +53,7 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
+    "com.telerik.plugins.nativepagetransitions": "^0.7.0",
     "cordova-plugin-camera": "^5.0.3",
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-device": "^2.0.2",
@@ -88,7 +92,9 @@
       "cordova-plugin-camera": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
-      "cordova-plugin-contacts": {}
+      "cordova-plugin-contacts": {},
+      "com.telerik.plugins.nativepagetransitions": {},
+      "cordova-plugin-nativestorage": {}
     },
     "platforms": [
       "android"
